minecraft/itzg-config/tcp-ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: minecraft-tcp-route
  namespace: minecraft
  labels:
    app.kubernetes.io/name: minecraft-tcp-route
    app.kubernetes.io/instance: minecraft-server
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: minecraft
    spec.ingressClassName: traefik
spec:
  entryPoints:
    - minecraft
  routes:
  - match: "HostSNI(`*`)"
    services:
      - name: neoforge-server-service
        port: 25565
        nativeLB: true
  tls:
    passthrough: true
    secretName: picklemustard-dev-tls-minecraft
